Fix top right button spacing

--- a/components/Header/index.scss
+++ b/components/Header/index.scss
@@ -8,7 +8,7 @@
         bottom: $unit * 2;
     }
 
-    #right {
+    #right > div {
         display: flex;
         gap: 8px;
     }
